Road grading; lays the groundwork for removing ScopeMember
Signed-off-by: Laird Nelson <ljnelson@gmail.com>